--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "dynamic_website",
-  "version": "1.0.0",
-  "description": "this is project for learning purpose",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon src/app.js"
-  },
-  "author": "Sunny kosle",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.2",
-    "express": "^4.17.3",
-    "hbs": "^4.2.0",
-    "mongoose": "^6.2.7",
-    "nodemon": "^2.0.15"
-  }
+    "name": "dynamic_website",
+    "version": "1.0.0",
+    "description": "this is project for learning purpose",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon src/app.js -e js,hbs"
+    },
+    "author": "Sunny kosle",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.2",
+        "express": "^4.17.3",
+        "hbs": "^4.2.0",
+        "mongoose": "^6.2.7",
+        "nodemon": "^2.0.15"
+    }
 }
