--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon src/app.js -e js,hbs"
+    "start": "nodemon src/app.js -e js,hbs"
   },
   "author": "Sunny kosle",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
+    "font-awesome": "^4.7.0",
     "hbs": "^4.2.0",
     "mongoose": "^6.2.7",
     "nodemon": "^2.0.15"
   }
 }
-
-   
